# Mesh-Solver

./: .gitignore  CMakeLists.txt  README.md  setup.py
bindings/: bindings.cpp
include/: Circuit.h  Component.h  Node.h  Solver.h
src/: Circuit.cpp  Component.cpp  Node.cpp  Solver.cpp  main.cpp
tests/: test_core.cpp  test_integration.py
